[package]
name = "auip"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version = "1", default-features = false}
managed = {version = "0.8", default-features = false, features = ["map"]}
log = "0.4"
auip-pkt = {path = "../auip-pkt"}
