[package]
name = "auip"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
auip-pkt = {path = "../pkt"}

[features]
default = []
alloc = []

# Layer 2
disable-layer2 = []
vlan = []
qinq = ["vlan"]

# Layer 3
ipv4 = []
ipv6 = []

ip-fragment = []

# Layer 4
udp = []

# Application layer
dhcp = []
dhcpv6 = []
dns = []

