[package]
name = "auip-tap"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["rt", "fs", "macros", "rt-multi-thread", "io-util", "process"]}
hex = "0.4"
env_logger = "0.8"
auip = {path = "../auip"}
auip-pkt = {path = "../pkt"}

