[package]
name = "auip-tap"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

log = "0.4"
env_logger = "0.8"

auip = { path = "../auip" }
auip-pkt = { path = "../pkt" }

[[example]]
name = "tap_stack"
required-features = ["alloc"]

